--- a/Frontend/Hotelier.WebUI/Views/Staff/Index.cshtml
+++ b/Frontend/Hotelier.WebUI/Views/Staff/Index.cshtml
@@ -1,8 +1,33 @@
-﻿
+﻿@model List<StaffViewModel>
+
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Personel Listesi";
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
+    int count = 0;
 }
 
-<h1>staff controller works</h1>
+<table class="table table-bordered">
+    <tr>
+        <th>#</th>
+        <th>Personel Adı</th>
+        <th>Personel Ünvan</th>
+        <th>Detaylar</th>
+        <th>Güncelle</th>
+        <th>Sil</th>
+    </tr>
+    @foreach (var item in Model)
+    {
+       count++;
+        <tr>
+            
+            <th>@count</th>
+            <td>@item.Name</td>
+            <td>@item.Title</td>
+            <td><a href="#" class="btn mb-1 btn-rounded btn-outline-dark">Detaylar</a></td>
+            <td><a href="/Staff/UpdateStaff/@item.StaffID" class="btn mb-1 btn-rounded btn-outline-success">Güncelle</a></td>
+            <td><a href="/Staff/DeleteStaff/@item.StaffID" class="btn mb-1 btn-rounded btn-outline-danger">Sil</a></td>
+        </tr>
+    }
+</table>
+<a href="/Staff/AddStaff/" class="btn mb-1 btn-rounded btn-outline-info">Yeni Personel Girişi</a>
 
