--- a/Frontend/Hotelier.WebUI/Views/_ViewImports.cshtml
+++ b/Frontend/Hotelier.WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using Hotelier.WebUI
 @using Hotelier.WebUI.Models
+@using Hotelier.WebUI.Models.Staff
+@using Hotelier.WebUI.Models.Testimonial
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
