--- a/Frontend/Hotelier.WebUI/Views/_ViewImports.cshtml
+++ b/Frontend/Hotelier.WebUI/Views/_ViewImports.cshtml
@@ -11,5 +11,8 @@
 @using Hotelier.WebUI.Dtos.StaffDto
 @using Hotelier.WebUI.Dtos.SubscribeDto
 @using Hotelier.WebUI.Dtos.BookingDto
+@using Hotelier.WebUI.Dtos.ContactDto
+@using Hotelier.WebUI.Dtos.GuestDto
+@using Hotelier.WebUI.Dtos.SendMessageDto
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
