--- a/Frontend/Hotelier.WebUI/Views/_ViewImports.cshtml
+++ b/Frontend/Hotelier.WebUI/Views/_ViewImports.cshtml
@@ -14,5 +14,8 @@
 @using Hotelier.WebUI.Dtos.ContactDto
 @using Hotelier.WebUI.Dtos.GuestDto
 @using Hotelier.WebUI.Dtos.SendMessageDto
+@using Hotelier.WebUI.Models.Mail
+@using Hotelier.WebUI.Dtos.WorkLocationDto
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
